--- a/assets/scss/_config.scss
+++ b/assets/scss/_config.scss
@@ -1,6 +1,6 @@
 // Primary colors
-$red-color: hsl(0, 78%, 62%);
 $cyan-color: hsl(180, 62%, 55%);
+$red-color: hsl(0, 78%, 62%);
 $orange-color: hsl(34, 97%, 64%);
 $blue-color: hsl(212, 86%, 64%);
 // Neutral colors
@@ -10,3 +10,10 @@ $light-gray-color: hsl(0, 0%, 98%);
 // Fonts
 $font-size: 15px;
 $font-stack: 'Poppins', sans-serif;
+// Shade - box shadow
+$shade-value: 
+0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+0 12.5px 10px rgba(0, 0, 0, 0.06),
+0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+0 41.8px 33.4px rgba(0, 0, 0, 0.055);
