--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,123 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
+body {
+  background-color: #fafafa;
+  padding: 20% 8%;
+}
+
+main {
+  font-family: "Poppins", sans-serif;
+  font-size: 15px;
+}
+main h1, main p#p-1, main h2.card-header {
+  color: #4c4e61;
+}
+main p#p-2, main p.card-paragraph {
+  color: #a3a5ae;
+}
+
+.paragraph {
+  text-align: center;
+  margin-bottom: 70px;
+}
+.paragraph h1, .paragraph p#p-1 {
+  font-size: 25px;
+}
+.paragraph h1 {
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+.paragraph p#p-1 {
+  font-weight: 200;
+}
+
+.cards {
+  margin-bottom: 25px;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.055);
+}
+.cards .cards-content {
+  padding: 6.5% 8% 8%;
+  background-color: #ffffff;
+}
+.cards .colored-area {
+  height: 3px;
+  width: 100%;
+}
+.cards.card1 > .colored-area {
+  background-color: #45d3d3;
+}
+.cards.card2 > .colored-area {
+  background-color: #ea5353;
+}
+.cards.card3 > .colored-area {
+  background-color: #fcaf4a;
+}
+.cards.card4 > .colored-area {
+  background-color: #549ef2;
+}
+.cards .cards-content {
+  height: 100%;
+}
+.cards h2.card-header {
+  font-size: 18.5px;
+}
+.cards p.card-paragraph {
+  font-size: 13px;
+}
+.cards .icon {
+  margin-top: 30px;
+  display: flex;
+  justify-content: flex-end;
+  align-content: flex-end;
+}
+.cards .icon img {
+  width: 48px;
+  height: 48px;
+}
+
+@media screen and (min-width: 1280px) {
+  body {
+    padding: unset;
+  }
+
+  .paragraph {
+    padding: 5% 10%;
+    margin-bottom: unset;
+  }
+
+  p#p-2 {
+    width: 40%;
+    margin: 0 30%;
+  }
+
+  .cards-section {
+    display: grid;
+    grid-template-columns: 1fr 335px 30px 335px 30px 335px 1fr;
+    grid-template-areas: ". grid1 . grid2 . grid3 .";
+    justify-items: center;
+    align-items: center;
+  }
+  .cards-section .cards {
+    height: 193px;
+    width: 335px;
+  }
+  .cards-section .card-group {
+    display: box;
+    grid-area: grid2;
+  }
+  .cards-section .card-group .card2 {
+    margin-bottom: 30px;
+  }
+  .cards-section .card1 {
+    grid-area: grid1;
+  }
+  .cards-section .card4 {
+    grid-area: grid3;
+  }
+}
 
 /*# sourceMappingURL=main.css.map */
